Closes #11088
Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>